--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
+    "html-webpack-plugin": "^2.8.1",
+    "redux": "^3.3.1",
     "webpack": "^1.12.13"
   },
   "scripts": {
